# vintedbot

./: .dockerignore  .env.example  .env.production.example  .gitignore  .replit  ADMIN_BYPASS_SUMMARY.md  ADMIN_PANEL_COMPLETE.md  ADMIN_SETUP_COMPLETE.md  AI_OPTIMIZATION_SUMMARY.md  AMELIORATIONS_IMPLEMENTEES.md  ANONYMAT_ET_DEPLOIEMENT.md  ARCHITECTURE_SECURISEE.md  BUGFIX_MISSING_METHOD.md  BUGFIX_USER_ISOLATION.md  BUGS_ANALYSE_APPROFONDIE.md  BUGS_A_CORRIGER.md  BUGS_SIMULATION_DEPLOIEMENT.md  CHANGELOG.md  COMMENT_PUBLIER_SUR_VINTED.md  CORRECTIONS_PHASE1_COMPLETE.md  CRITICAL_SECURITY_AUDIT.md  CRON_SETUP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STORAGE.md  DEPLOY_GUIDE.md  DOTB_COMPARISON.md  DRAFT_OPTIMIZATION_AND_MULTILINGUAL_REPORT.md  Dockerfile  ENTERPRISE_AUDIT_REPORT.md  FEATURES_IMPLEMENTED.md  FEATURE_ROADMAP.md  FICHIERS_MODIFIES_SESSION.md  FINAL_100_PERCENT_VALIDATION.md  FINAL_SECURITY_DEPLOYMENT_REPORT.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  GUIDE_DEPLOIEMENT_URGENT.md  GUIDE_MESSAGES_AUTOMATION.md  GUIDE_PUBLICATION_VINTED.md  (+81 more)
backend/: .bandit  .dockerignore  .env.example  .pylintrc  Dockerfile  Dockerfile.production  Dockerfile.test  PRO_FEATURES_IMPLEMENTATION.md  README.md  app.py  database.py  db.py  fly.toml  generate_secrets.py  jobs.py  models.py  mypy.ini  playwright_worker.py  pyproject.toml  requirements-full.txt  requirements-local.txt  requirements-test.txt  requirements.txt  run_migrations.py  settings.py  validate_env.py  vinted_connector.py
backend/.claude/: settings.local.json
backend/automation/: auto_bump.py  auto_follow.py  auto_messages.py  scheduler.py
backend/core/: admin.py  advanced_defect_detector.py  ai_analyzer.py  ai_optimizer.py  anonymity.py  anti_detection.py  auth.py  auth_enhanced.py  auto_backup.py  backup.py  backup_system.py  cache.py  circuit_breaker.py  cookie_manager.py  cost_tracker.py  csrf_protection.py  database.py  description_generator.py  distributed_lock.py  email_service.py  encrypted_logging.py  error_sanitizer.py  health_checks.py  job_wrapper.py  jwt_refresh.py  market_pricing_engine.py  media.py  metrics.py  migration.py  monitoring.py  multi_account_manager.py  openai_client.py  proxy_manager.py  rate_limiter.py  redis_cache.py  redis_client.py  retry_utils.py  s3_storage.py  sentry.py  sentry_config.py  (+8 more)
backend/crm/: __init__.py  crm_manager.py
backend/data/: db.sqlite  items.json  session.enc  vbs.db
backend/finance/: __init__.py  finance_manager.py
backend/inventory/: __init__.py  inventory_manager.py
backend/jobs/: scheduled_publisher.py
backend/middleware/: error_handler.py  quota_checker.py  security_headers.py  (+1 more)
(+526 files in other folders)
