[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.119.0",
    "imagehash>=4.3.2",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14.1",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
