[project]
name = "vintedbot-api"
version = "1.0.0"
description = "AI-powered clothing resale assistant API"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
    "rapidfuzz>=3.0.0",
    "pandas>=2.0.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "filetype>=1.2.0",
    "boto3>=1.28.0",
    "tenacity>=8.2.0",
    "slowapi>=0.1.9",
    "playwright>=1.55.0",
    "cryptography>=46.0.2",
    "itsdangerous>=2.2.0",
    "openai>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
